Correct gap between map and filter selections

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,11 +107,10 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
+	/* height: 120%; */
   /* height: 50px; */
 	/* height: 500px; */
   background-color: #3397DB;
-	/* background-color: #ff3456; */
-  /* background-color: green; */
   /* align-items: center; */
 }
 .filter-options h2 {
@@ -119,7 +118,6 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
 }
 .filter-options select {
   background-color: white;
@@ -312,6 +310,36 @@ nav h1 a {
 		/* margin-right: 30%; */
 		/* margin-left: 20%;
 		margin-right: 20%; */
+	}
+
+	.filter-options h2 {
+		width: 50%;
+		height: 10%;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		/* margin-bottom: auto; */
+		margin-top: 5%;
+		text-align: center;
+	}
+
+	#neighborhoods-select {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width: 50%;
+	}
+
+	#cuisines-select {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width: 50%;
+		margin-bottom: 5%;
+	}
+
+	#page-content {
+		margin-top: -5%;
 	}
 }
 
